// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the Snackbar component should render correctly with "error" variant 1`] = `
<WithStyles(ForwardRef(Snackbar))
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  autoHideDuration={10000}
  onClose={[Function]}
  open={true}
>
  <SnackbarImpl
    handleClose={[Function]}
    headline="Test Headline"
    message="Test Message"
    variant="error"
  />
</WithStyles(ForwardRef(Snackbar))>
`;

exports[`the Snackbar component should render correctly with "info" variant 1`] = `
<WithStyles(ForwardRef(Snackbar))
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  autoHideDuration={10000}
  onClose={[Function]}
  open={true}
>
  <SnackbarImpl
    handleClose={[Function]}
    headline="Test Headline"
    message="Test Message"
    variant="info"
  />
</WithStyles(ForwardRef(Snackbar))>
`;

exports[`the Snackbar component should render correctly with "warning" variant 1`] = `
<WithStyles(ForwardRef(Snackbar))
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  autoHideDuration={10000}
  onClose={[Function]}
  open={true}
>
  <SnackbarImpl
    handleClose={[Function]}
    headline="Test Headline"
    message="Test Message"
    variant="warning"
  />
</WithStyles(ForwardRef(Snackbar))>
`;

exports[`the Snackbar component should render correctly with no handleClose function provided 1`] = `
<WithStyles(ForwardRef(Snackbar))
  anchorOrigin={
    Object {
      "horizontal": "right",
      "vertical": "top",
    }
  }
  autoHideDuration={10000}
  onClose={[Function]}
  open={true}
>
  <SnackbarImpl
    headline="Test Headline"
    message="Test Message"
    variant="error"
  />
</WithStyles(ForwardRef(Snackbar))>
`;
